--- a/src/components/App.css
+++ b/src/components/App.css
@@ -19,9 +19,10 @@
 
 .content .today__container {
     display: flex;
-    justify-content: space-around;
+    /* justify-content: space-around; */
     align-items: center;
     padding-bottom: 5%;
+    flex-direction: column;
 }
 
 .today {
@@ -36,4 +37,14 @@
 .icon__container{
     display: flex;
     justify-content: center;
+}
+.align-items{
+    display: flex;
+    flex-direction: column;
+}
+.later__today{
+    display: flex;
+    justify-content: space-around;
+   
+    width: 100%;
 }
